ca: Add campus ambassador program. Adjust logo visibility. Fix 404 page.

--- a/public/static/stylesheets/index.style.css
+++ b/public/static/stylesheets/index.style.css
@@ -151,6 +151,10 @@ input[type = "file"] {
     width: 7em;
     margin-left: -3.5em;
     top:40%;
+    transition: transform 0.2s ease-in;
+}
+.navbar .logo.visible {
+    transform: scale(0);
 }
 .navbar .logo img {
     width:100%;
@@ -171,8 +175,6 @@ input[type = "file"] {
     flex-grow: 1;
     color: #191919;
     height: 100%;
-    text-transform: uppercase;
-    font-weight: bold;
     justify-content: flex-end;
 }
 
@@ -187,8 +189,10 @@ input[type = "file"] {
     background:none;
     padding-right: 0em;
 }
-.navbar .button > div {
+.navbar .button > div:not(.dropdown) {
     margin-left: 0.5em;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .navbar .button.visible {
@@ -454,7 +458,7 @@ input[type = "file"] {
     position:relative;
     font-size: 1.1em;
     box-sizing: border-box;
-    background: #262626;
+    background: linear-gradient(120deg, #242424 50%, #262626 50%);
     transition: margin-left 0.3s ease-out, margin-top 0s 0.3s ease-out;
 }
 
@@ -470,6 +474,17 @@ input[type = "file"] {
     width:100%;
     height: 100%;
     margin-left: inherit;
+}
+.sidebar > .wrapper > img {
+    width: 7em;
+    transition: transform 0.3s 0.5s;
+    transform: scale(0);
+    will-change: transform;
+    filter: drop-shadow(0px 0px 5px #000)
+}
+.sidebar.visible > .wrapper > img {
+    transition: transform 0.3s;
+    transform: scale(1);
 }
 
 .sidebar.visible {
